--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-bg">
         <nav>
             <h3 class="nav-title">Ra<span class="text-primary">f</span><span>i</span>d</h3>
             <ul>
@@ -34,6 +34,59 @@
         </div>
     </header>
     <main>
+        <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="about-items">
+               <!-- .about-item*4>p.item-title+p.item-description -->
+               <div class="about-item">
+                <p class="item-title">name</p>
+                <p class="item-description">Md Tahmidul Hasan Rafid</p>
+               </div>
+               <div class="about-item">
+                <p class="item-title">Email</p>
+                <p class="item-description">rafidofficial02@gmail.com</p>
+               </div>
+               <div class="about-item">
+                <p class="item-title">Date of Birth</p>
+                <p class="item-description">Nov 08, 2004</p>
+               </div>
+               <div class="about-item">
+                <p class="item-title">from</p>
+                <p class="item-description">Dhaka, Bangladesh</p>
+               </div>
+
+                
+            </div>
+        </section>
+        <section class="skills">
+            <h3 class="section-title text-center">What I do</h3>
+            <p class="section-description text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+
+            <div class="skills-container">
+                <!-- .skill*4>img+h4.skill-title+p.skill-description -->
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h4 class="skill-title">Vanilla JavaScript</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h4 class="skill-title">Node.js</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. </p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
